--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 
 <body>
   <main>
-    <div class="img">
-      <img src="./images/image-header-mobile.jpg" alt="">
-    </div>
+    <div class="img"></div>
+    <img src="./images/image-header-mobile.jpg" alt="#">
 
     <div class="content">
       <h1>Get <span class="violet">insights</span> that help your business grow.</h1>
