--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 <body>
   <main>
-    <div class="img"></div>
-    <img src="./images/image-header-mobile.jpg" alt="#">
+    <div class="img">
+      <img src="./images/image-header-mobile.jpg" alt="#">
+    </div>
 
     <div class="content">
       <h1>Get <span class="violet">insights</span> that help your business grow.</h1>
